# kane

./: CMakeLists.txt  README.md  assets.cpp  assets.h  building.md  cursor.cpp  cursor.h  entity_merchant.cpp  entity_merchant.h  entity_shadow.cpp  entity_shadow.h  impl.cpp  logging.h  main.cpp  packages.txt  readme.md  rendering.cpp  rendering.h  settings.cpp  settings.h  timing.cpp  timing.h
emico/: .gitignore  demo.cpp  emico.py
emico/include/: emico.h
include/kane/: assets.h  audio.h  camera.h  cursor.h  entity_merchant.h  entity_mud_minion.h  entity_mud_summoner.h  entity_shadow.h  game.h  input.h  local_player.h  logging.h  rendering.h  settings.h  signals.h  timing.h  traits.h
include/kane/npc/: merchant.h  mud_minion.h  mud_summoner.h
source/kane/: assets.cpp  audio.cpp  camera.cpp  cursor.cpp  entity_merchant.cpp  entity_mud_minion.cpp  entity_mud_summoner.cpp  entity_shadow.cpp  game.cpp  input.cpp  local_player.cpp  main.cpp  rendering.cpp  settings.cpp  signals.cpp  timing.cpp  traits.cpp
source/kane/npc/: merchant.cpp  mud_minion.cpp  mud_summoner.cpp
